// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Banners|AlertBanner default 1`] = `
<section
  className="sc-bxivhb eMtVEh"
>
  <div
    className="sc-EHOje jtyqUw"
  >
    <p>
      alert text
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15 sc-ifAKCX bqdATS sc-bdVaJa iRGXdW"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2 label"
        >
          button text
        </span>
      </button>
    </p>
  </div>
</section>
`;

exports[`Storyshots Banners|ErrorSuccessBanner error 1`] = `
<div
  className="sc-gzVnrw avLPF"
  color="#C1363F"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-30 root styled-icon sc-VigVT bkqdLp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    error
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-contained-50 MuiButton-raised-53 sc-dnqmqq ibEVtO sc-bdVaJa iRGXdW"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-40 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-30 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Banners|ErrorSuccessBanner success 1`] = `
<div
  className="sc-gzVnrw dHKoqK"
  color="#5DBA9C"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-68 root styled-icon sc-gqjmRU kVDmhf"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    success
  </div>
  <button
    className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-contained-88 MuiButton-raised-91 sc-dnqmqq ibEVtO sc-bdVaJa iRGXdW"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-78 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-68 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|BaseButton default 1`] = `
<button
  className="MuiButtonBase-root-132 MuiButton-root-106 MuiButton-contained-117 MuiButton-raised-120 sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-107 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-135 root styled-icon sc-jTzLTM hcMwfQ"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    label text
  </span>
</button>
`;

exports[`Storyshots Buttons|GhostButton default 1`] = `
<button
  className="MuiButtonBase-root-170 MuiButton-root-144 MuiButton-contained-155 MuiButton-raised-158 sc-cSHVUG kHrWJa sc-bdVaJa iRGXdW"
  disabled={false}
  loading={true}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-145 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-173 root styled-icon sc-kAzzGY erAjjA"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    label text
  </span>
</button>
`;

exports[`Storyshots Buttons|IconButton default 1`] = `
<button
  className="MuiButtonBase-root-188 MuiIconButton-root-182"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiIconButton-label-187"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-191 root styled-icon sc-jWBwVP hVaZHp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-200"
  />
</button>
`;

exports[`Storyshots Buttons|IconButton disabled 1`] = `
<button
  className="MuiButtonBase-root-213 MuiButtonBase-disabled-214 MuiIconButton-root-207 MuiIconButton-disabled-211"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiIconButton-label-212"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-216 root styled-icon sc-brqgnP gPRpjC"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots Buttons|PrimaryButton default 1`] = `
<button
  className="MuiButtonBase-root-251 MuiButton-root-225 MuiButton-contained-236 MuiButton-raised-239 sc-fjdhpX hOlhzH sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-226 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-254 root styled-icon sc-chPdSV hAzNAC"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    label text
  </span>
</button>
`;

exports[`Storyshots Buttons|SecondaryButton default 1`] = `
<button
  className="MuiButtonBase-root-289 MuiButton-root-263 MuiButton-contained-274 MuiButton-raised-277 sc-jzJRlG fbrupr sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-264 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-292 root styled-icon sc-kgoBCf jnadPW"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    label text
  </span>
</button>
`;

exports[`Storyshots Buttons|TextButton default 1`] = `
<button
  className="MuiButtonBase-root-327 MuiButton-root-301 MuiButton-contained-312 MuiButton-raised-315 sc-htpNat fzSZoe sc-bdVaJa iRGXdW"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-302 label"
  >
    label text
  </span>
</button>
`;

exports[`Storyshots Cards|BaseCard default 1`] = `
<div
  className="MuiPaper-root-331 MuiPaper-elevation1-334 MuiPaper-rounded-332 MuiCard-root-330 card sc-kpOJdX jASBwq"
>
  <div
    style={
      Object {
        "padding": "20px",
      }
    }
  >
    card content
  </div>
</div>
`;

exports[`Storyshots Cards|ContainerWrappedCard default 1`] = `
<div
  className="MuiPaper-root-358 paper MuiPaper-elevation2-362 MuiPaper-rounded-359 sc-kGXeez ivBmvZ"
>
  <div
    className="MuiPaper-root-358 MuiPaper-elevation1-361 MuiPaper-rounded-359 MuiCard-root-385 card sc-kpOJdX jASBwq"
  >
    <div
      style={
        Object {
          "padding": "20px",
        }
      }
    >
      card content
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards|TitleCard default 1`] = `
<div
  className="MuiPaper-root-387 MuiPaper-elevation1-390 MuiPaper-rounded-388 MuiCard-root-386 card sc-dxgOiQ iyZPaB"
  color="#4B9FE6"
>
  <h1>
    card content
  </h1>
</div>
`;

exports[`Storyshots Headings|H1 default 1`] = `
<h1
  className="sc-ckVGcZ cnlDhP"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H1 header text
</h1>
`;

exports[`Storyshots Headings|H2 default 1`] = `
<h2
  className="sc-jKJlTe cqIcQT"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H2 header text
</h2>
`;

exports[`Storyshots Headings|H3 default 1`] = `
<h3
  className="sc-eNQAEJ iHUrpc"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H3 header text
</h3>
`;

exports[`Storyshots Links|BaseLink default 1`] = `
<a
  className="sc-hMqMXs koozGu"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  Base Link
</a>
`;

exports[`Storyshots Links|BaseLink icon 1`] = `
<a
  className="sc-hMqMXs koozGu"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-414 root styled-icon sc-cMljjf bbFUgO"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  Base Link
</a>
`;

exports[`Storyshots Links|GhostButtonLink default 1`] = `
<a
  className="sc-kEYyzF kJCPen sc-hMqMXs koozGu"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  Ghost Button Link
</a>
`;

exports[`Storyshots Links|GhostButtonLink icon 1`] = `
<a
  className="sc-kEYyzF kJCPen sc-hMqMXs koozGu"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-423 root styled-icon sc-jAaTju fcuGzG"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  Ghost Button Link
</a>
`;

exports[`Storyshots List Items|ListItem button 1`] = `
<div
  className="MuiButtonBase-root-498 MuiListItem-root-486 MuiListItem-default-489 MuiListItem-gutters-494 MuiListItem-button-495"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-501 item-text"
  >
    <span
      className="MuiTypography-root-507 MuiTypography-body1-516 MuiListItemText-primary-504"
    >
      List Item Button
    </span>
  </div>
  <span
    className="MuiTouchRipple-root-543"
  />
</div>
`;

exports[`Storyshots List Items|ListItem default 1`] = `
<li
  className="MuiListItem-root-432 MuiListItem-default-435 MuiListItem-gutters-440"
  disabled={false}
>
  <div
    className="MuiListItemText-root-444 item-text"
  >
    <span
      className="MuiTypography-root-450 MuiTypography-body1-459 MuiListItemText-primary-447"
    >
      Default List Item
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem disabled 1`] = `
<li
  className="MuiListItem-root-550 MuiListItem-default-553 MuiListItem-gutters-558 MuiListItem-disabled-556"
  disabled={true}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-562 item-text"
  >
    <span
      className="MuiTypography-root-568 MuiTypography-body1-577 MuiListItemText-primary-565"
    >
      List Item Disabled
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem icon 1`] = `
<li
  className="MuiListItem-root-604 MuiListItem-default-607 MuiListItem-gutters-612"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-616 item-text"
  >
    <span
      className="MuiTypography-root-622 MuiTypography-body1-631 MuiListItemText-primary-619"
    >
      List Item w/ Icon
    </span>
  </div>
  <div
    className="MuiListItemIcon-root-658"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-659 root styled-icon sc-jDwBTQ hZALBP"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem selected 1`] = `
<li
  className="MuiListItem-root-668 MuiListItem-default-671 MuiListItem-gutters-676 MuiListItem-selected-679"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-680 item-text"
  >
    <span
      className="MuiTypography-root-686 MuiTypography-body1-695 MuiListItemText-primary-683"
    >
      List Item Selected
    </span>
  </div>
</li>
`;

exports[`Storyshots Loading Indicators|LoadingIndicator default 1`] = `
<div
  className="sc-kkGfuU bbBBiQ"
>
  <section
    className="sc-eHgmQL hRkGxK"
  >
    <div
      className="sc-gPEVay bthiAm"
    />
    <div
      className="sc-iRbamj eAuUSe"
    />
    <div
      className="sc-jlyJG eTqOxN"
    />
    <div
      className="sc-gipzik bsUhBV"
    />
    <div
      className="sc-csuQGl dDQDIr"
    />
    <div
      className="sc-Rmtcm fVrLYk"
    />
    <div
      className="sc-bRBYWo hLNJce"
    />
    <div
      className="sc-hzDkRC gsbLLn"
    />
    <div
      className="sc-jhAzac ikXYML"
    />
    <div
      className="sc-fBuWsC cbYxLG"
    />
    <div
      className="sc-fMiknA bpzcIM"
    />
    <div
      className="sc-dVhcbM gVYeqT"
    />
  </section>
</div>
`;

exports[`Storyshots Loading Indicators|SmallLoadingIndicator default 1`] = `
<span
  className="sc-iAyFgw kYkQQ"
>
  <span
    className="sc-hSdWYo iIryAi"
  >
    <div
      className="sc-eqIVtm hRpqKQ"
    />
    <div
      className="sc-fAjcbJ zZseQ"
    />
    <div
      className="sc-caSCKo hsGLMO"
    />
    <div
      className="sc-gisBJw bsxMvz"
    />
    <div
      className="sc-kjoXOD bAlrIy"
    />
    <div
      className="sc-cHGsZl kuJtYY"
    />
    <div
      className="sc-TOsTZ cltGrB"
    />
    <div
      className="sc-kgAjT cBLwJO"
    />
    <div
      className="sc-cJSrbW dscxlV"
    />
    <div
      className="sc-ksYbfQ kLYnHo"
    />
    <div
      className="sc-hmzhuo mhlwp"
    />
    <div
      className="sc-frDJqD kMeTcJ"
    />
  </span>
</span>
`;

exports[`Storyshots Paper|BasePaper default 1`] = `
<div
  className="MuiPaper-root-722 MuiPaper-elevation2-726 MuiPaper-rounded-723"
>
  <div
    style={
      Object {
        "padding": "20px",
      }
    }
  >
    paper content
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper default 1`] = `
<div
  className="MuiPaper-root-749 MuiPaper-elevation2-753 MuiPaper-rounded-750 sc-cvbbAY ehsrCi"
>
  <div
    style={
      Object {
        "padding": "20px",
      }
    }
  >
    paper content
  </div>
</div>
`;
